# GRATE

./: .gitignore  CMakeLists.txt  GRATE-test.eps  GRATE.cc  Pref_Pb_Pb.root
TGlauber/: TGlauNucleus.cc  TGlauNucleus.hh  TGlauberMC.cc  TGlauberMC.hh
build_unif/: CMakeCache.txt  GRATE  Makefile  cmake_install.cmake
build_unif/TGlauber/: Makefile  cmake_install.cmake
include/: DeexcitationHandler.hh  ExcitationEnergy.hh  GRATEmanager.hh  HandlerTestHistoManager.hh  TGlauNucleon.hh  TGlauNucleus.hh  TGlauberMC.hh
src/: DeexcitationHandler.cc  ExcitationEnergy.cc  GRATEmanager.cc  HandlerTestHistoManager.cc  InitialConditions.cc  TGlauNucleon.cc  TGlauNucleus.cc  TGlauberMC.cc
src/SMM/: G4StatMFMacroCanonical.cc  G4StatMFMicroPartition.cc  G4StatMFParameters.cc
